--- a/services/ingress/compose.prod.yaml
+++ b/services/ingress/compose.prod.yaml
@@ -24,8 +24,6 @@ services:
       # HTTP -> HTTPS redirect at entrypoint level
       - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
       - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
-      - "--entrypoints.websecure.http.tls.certresolver=letsencrypt"
-      - "--entrypoints.websecure.http.tls.domains[0].main=${HOST}.${DOMAIN}"
       # Enable watching mounted volume for dynamic configuration
       - "--providers.file.directory=/etc/traefik/dynamic"
       - "--providers.file.watch=true"
@@ -52,3 +50,5 @@ services:
       - "--global.checknewversion=true"
       # Disable sending anonymous usage data to the Traefik maintainers
       - "--global.sendanonymoususage=false"
+    labels:
+      - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
