Set cookie domains.

--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -21,6 +21,7 @@ services:
       TF_VAR_state_encryption_passphrase: ${tofu_state_encryption_passphrase}
       TF_VAR_oauth_application_base_url: "https://${HOST}.${DOMAIN}/apps"
       TF_VAR_ssl_insecure_skip_verify: "${OAUTH_SSL_INSECURE_SKIP_VERIFY:-false}"
+      TF_VAR_cookie_domain: "${HOST}.${DOMAIN}"
     networks:
       - keycloak
     depends_on:
