--- a/services/applications/whoami-compose.yaml
+++ b/services/applications/whoami-compose.yaml
@@ -38,7 +38,8 @@ services:
         condition: service_healthy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathRegexp(`^/apps/whoami/?`)"
+      # Only protect the app paths, NOT the oauth2-proxy endpoints
+      - "traefik.http.routers.whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/whoami`)&&!PathPrefix(`/apps/whoami/oauth/`)"
       - "traefik.http.routers.whoami.entrypoints=websecure"
       - "traefik.http.services.whoami.loadbalancer.server.port=80"
       # Apply middlewares
