WIP on OAuth2-Proxy for vaultwarden.

--- a/services/applications/vaultwarden-compose.yaml
+++ b/services/applications/vaultwarden-compose.yaml
@@ -1,17 +1,48 @@
 networks:
   vaultwarden:
     driver: bridge
-
 volumes:
   vaultwarden-data:
     name: "${HOST}.${DOMAIN}-vaultwarden_data"
-
+secrets:
+  vaultwarden_oauth_cookie_secret:
+    file: ${OAUTH_CONFIG_DIR}/vaultwarden/oauth_cookie_secret
+  vaultwarden_oauth_client_secret:
+    file: ${OAUTH_CONFIG_DIR}/vaultwarden/oauth_client_secret
 services:
+  oauth2-proxy-vaultwarden:
+    hostname: oauth2-proxy-vaultwarden.${DOMAIN}
+    extends:
+      file: ../auth/proxy/compose.oauth2_proxy_base.yaml
+      service: oauth2-proxy-base
+    secrets:
+      - vaultwarden_oauth_cookie_secret
+      - vaultwarden_oauth_client_secret
+    labels:
+      - "traefik.http.routers.oauth2-proxy-vaultwarden.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/${VAULTWARDEN_ROUTE_PREFIX}/oauth/`)"
+      - "traefik.http.routers.oauth2-proxy-vaultwarden.entrypoints=websecure"
+      - "traefik.http.services.oauth2-proxy-vaultwarden.loadbalancer.server.port=4180"
+      - "traefik.http.routers.oauth2-proxy-vaultwarden.tls=true"
+      # Make sure this router wins when both could match
+      - "traefik.http.routers.oauth2-proxy-vaultwarden.priority=200"
+      # Define middlewares for this oauth app
+      # Use Docker-network HTTP to avoid Traefik verifying its own dev TLS cert
+      - "traefik.http.middlewares.oauth-auth-vaultwarden.forwardAuth.address=http://oauth2-proxy-vaultwarden:4180/apps/${VAULTWARDEN_ROUTE_PREFIX}/oauth/auth"
+      - "traefik.http.middlewares.oauth-auth-vaultwarden.forwardAuth.trustForwardHeader=true"
+      - "traefik.http.middlewares.oauth-auth-vaultwarden.forwardAuth.authResponseHeaders=Authorization,X-Auth-Request-Access-Token"
+      - "traefik.http.middlewares.oauth-errors-vaultwarden.errors.status=401-403"
+      - "traefik.http.middlewares.oauth-errors-vaultwarden.errors.query=/apps/${VAULTWARDEN_ROUTE_PREFIX}/oauth2/sign_in?rd={url}"
+      - "traefik.http.middlewares.oauth-errors-vaultwarden.errors.service=oauth2-proxy-vaultwarden"
+    volumes:
+      - "${OAUTH_CONFIG_DIR}/vaultwarden/oauth2-proxy-traefik.cfg:/oauth2-proxy.cfg"
   vaultwarden:
     extends:
       file: common.yaml
       service: application
     image: ${VAULTWARDEN_IMAGE_TAG}
+    depends_on:
+      oauth2-proxy-vaultwarden:
+        condition: service_healthy
     volumes:
       - vaultwarden-data:/data
     environment:
@@ -35,8 +66,6 @@ services:
       retries: 3
       start_period: 90s
     labels:
-      # Enable Traefik for this container
-      - "traefik.enable=true"
       # Match incoming requests on a specific hostname
       - "traefik.http.routers.vaultwarden.rule=Host(`${HOST}.${DOMAIN}`)&&PathRegexp(`^/${VAULTWARDEN_ROUTE_PREFIX}/?`)"
       # Apply middlewares
@@ -47,9 +76,12 @@ services:
       - "traefik.http.routers.vaultwarden.entrypoints=websecure"
       # Define the internal container port for routing
       - "traefik.http.services.vaultwarden.loadbalancer.server.port=80"
-      # Enable TLS on this router
       - "traefik.http.routers.vaultwarden.tls=true"
-      # Use Let's Encrypt for certificate management
-#      - "traefik.http.routers.vaultwarden.tls.certresolver=letsencrypt"
       # Pass the original Host header to the container
       - "traefik.http.services.vaultwarden.loadbalancer.passhostheader=true"
+      # Only protect the app paths, NOT the oauth2-proxy endpoints
+      - "traefik.http.routers.vaultwarden.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/${VAULTWARDEN_ROUTE_PREFIX}`)&&!PathPrefix(`/apps/${VAULTWARDEN_ROUTE_PREFIX}/oauth/`)"
+      - "traefik.http.routers.vaultwarden.entrypoints=websecure"
+      - "traefik.http.services.vaultwarden.loadbalancer.server.port=80"
+      - "traefik.http.routers.vaultwarden.middlewares=compress-traefik@file,security-headers@file,oauth-auth-vaultwarden,oauth-errors-vaultwarden"
+      - "traefik.http.routers.vaultwarden.tls=true"
