--- a/services/applications/whoami-compose.yaml
+++ b/services/applications/whoami-compose.yaml
@@ -42,5 +42,5 @@ services:
       - "traefik.http.routers.whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/whoami`)&&!PathPrefix(`/apps/whoami/oauth/`)"
       - "traefik.http.routers.whoami.entrypoints=websecure"
       - "traefik.http.services.whoami.loadbalancer.server.port=80"
-      - "traefik.http.routers.whoami.middlewares=compress-traefik@file,security-headers@file,oauth-auth-whoami,oauth-errors-whoami"
+      - "traefik.http.routers.whoami.middlewares=compress-traefik@file,append-slash@file,security-headers@file,oauth-auth-whoami,oauth-errors-whoami"
       - "traefik.http.routers.whoami.tls=true"
