--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,9 @@
 include:
   - services/ingress/compose.yaml
   - services/auth/identity/compose.yaml
+services:
+  traefik:
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - traefik-certificates:/etc/traefik/acme
+      - ./traefik_configuration/:/etc/traefik/dynamic/common
