--- a/services/applications/whoami-compose.yaml
+++ b/services/applications/whoami-compose.yaml
@@ -4,8 +4,8 @@ secrets:
   whoami_oauth_client_secret:
     file: ${OAUTH_CONFIG_DIR}/whoami/oauth_client_secret
 services:
-  oauth2-proxy-whoami:
-    hostname: oauth2-proxy-whoami.${DOMAIN}
+  whoami-oauth2-proxy:
+    hostname: oauth2-proxy-whoami
     extends:
       file: ../auth/proxy/compose.oauth2_proxy_base.yaml
       service: oauth2-proxy-base
@@ -13,34 +13,21 @@ services:
       - whoami_oauth_cookie_secret
       - whoami_oauth_client_secret
     labels:
-      - "traefik.http.routers.oauth2-proxy-whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/whoami/oauth/`)"
-      - "traefik.http.routers.oauth2-proxy-whoami.entrypoints=websecure"
-      - "traefik.http.services.oauth2-proxy-whoami.loadbalancer.server.port=4180"
-      - "traefik.http.routers.oauth2-proxy-whoami.tls=true"
-      # Make sure this router wins when both could match
-      - "traefik.http.routers.oauth2-proxy-whoami.priority=200"
-      # Define middlewares for this oauth app
-      # Use Docker-network HTTP to avoid Traefik verifying its own dev TLS cert
-      - "traefik.http.middlewares.oauth-auth-whoami.forwardAuth.address=http://oauth2-proxy-whoami:4180/apps/whoami/oauth/auth"
-      - "traefik.http.middlewares.oauth-auth-whoami.forwardAuth.trustForwardHeader=true"
-      - "traefik.http.middlewares.oauth-auth-whoami.forwardAuth.authResponseHeaders=Authorization,X-Auth-Request-Access-Token"
-      - "traefik.http.middlewares.oauth-errors-whoami.errors.status=401-403"
-      - "traefik.http.middlewares.oauth-errors-whoami.errors.query=/apps/whoami/oauth2/sign_in?rd={url}"
-      - "traefik.http.middlewares.oauth-errors-whoami.errors.service=oauth2-proxy-whoami"
+      - "traefik.http.routers.whoami-oauth2-proxy.service=whoami-oauth2-proxy"
+      - "traefik.http.services.whoami-oauth2-proxy.loadbalancer.server.port=4180"
+      - "traefik.http.services.whoami-oauth2-proxy.loadbalancer.passhostheader=true"
     volumes:
       - "${OAUTH_CONFIG_DIR}/whoami/oauth2-proxy.cfg:/oauth2-proxy.cfg"
   whoami:
+#    hostname: whoami
     extends:
       file: common.yaml
       service: application
     image: traefik/whoami
     depends_on:
-      oauth2-proxy-whoami:
+      whoami-oauth2-proxy:
         condition: service_healthy
     labels:
-      # Only protect the app paths, NOT the oauth2-proxy endpoints
-      - "traefik.http.routers.whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathPrefix(`/apps/whoami`)&&!PathPrefix(`/apps/whoami/oauth/`)"
-      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.service=whoami"
       - "traefik.http.services.whoami.loadbalancer.server.port=80"
-      - "traefik.http.routers.whoami.middlewares=compress-traefik@file,append-slash@file,security-headers@file,oauth-auth-whoami,oauth-errors-whoami"
-      - "traefik.http.routers.whoami.tls=true"
+      - "traefik.http.services.whoami.loadbalancer.passhostheader=true"
