Add app-prefix removal middleware.

--- a/services/ingress/traefik_configuration/middlewares.yml
+++ b/services/ingress/traefik_configuration/middlewares.yml
@@ -7,7 +7,10 @@ http:
         permanent: true
         regex: "^(https?://[^/?#]+/apps/[^/?#]+)(\\?.*)?$"
         replacement: "${1}/${2}"
-
+    strip-app-prefix:
+      stripPrefixRegex:
+        regex:
+          - "^/apps/[^/]+/?"
     security-headers:
       headers:
         browserXssFilter: true
