--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -6,6 +6,7 @@ services:
       - tofu_state:/work
       - ${OAUTH_CONFIG_DIR}:/work/proxy_config
       - ${TRAEFIK_CONFIG_DIR}:/work/traefik_config
+      - ../../../tofu_variables.auto.tfvars.json:/work/terraform.auto.tfvars.json:ro
     environment:
       TF_VAR_keycloak_internal_url: ${KEYCLOAK_URL:-http://keycloak:8080/${KEYCLOAK_ROUTE_PREFIX}}
       TF_VAR_keycloak_public_url: "https://${HOST}.${DOMAIN}/${KEYCLOAK_ROUTE_PREFIX}"
@@ -18,7 +19,6 @@ services:
       TF_VAR_smtp_username: ${SMTP_USERNAME}
       TF_VAR_smtp_password: ${SMTP_PASSWORD}
       TF_VAR_smtp_from_email: "keycloak@${SMTP_FROM_EMAIL_DOMAIN}"
-      TF_VAR_smtp_from_name: "Keycloak"
       TF_VAR_state_encryption_passphrase: ${tofu_state_encryption_passphrase}
       TF_VAR_oauth_application_base_url: "https://${HOST}.${DOMAIN}/apps"
       TF_VAR_ssl_insecure_skip_verify: "${OAUTH_SSL_INSECURE_SKIP_VERIFY:-false}"
