Provision keycloak realm and oauth2 proxies for applications (#2)
* WIP on OpenTofu container to configure Keycloak realms.

* Separate SMTP settings from vaultwarden/keycloak variables. Set smtp settings in keycloak configuration container.

* Apply OpenTofu to create realm for domain automatically with core setup.

* WIP for providing access only to non-master realm login.

* Provide host.domain/login redirect for convenience.

* Add separate novops file for OAuth2 Proxy vars.

* WIP on base OAuth2 proxy compose template to extend.

* Define secrets directory for OAuth2 secrets.

* WIP on defining OAuth2 proxy template and example with whoami.

* Build core images before app images.

* Remove central app oauth proxy. Add common traefik network labels.

* Update SMTP_FROM for Vaultwarden.

* Generate OAuth2 client secrets in OpenTofu and save to secrets mounted volume.

* WIP on OAuth2 proxy using mounted secret files.

* Generate oauth clients for each application.

* Save templated config for proxy in same directory as secrets.

* WIP on whoami test of oauth2 proxy.

* Rename config/secrets directory.

* Revise public/private endpoints for oauth proxy.

* Revise setting of oidc_issuer_url.

* Use public url for auth proxy and add internal alias for accessing ingress.

* Skip SSL verification for dev.

* WIP on default HTTPS certificate.

* Revise config location.

* Add tofu state encryption key.

* Correct quotations around CA server.

* Remove containers which are not running when calling destroy.

* Set TLS for dashboard.

* Remove v1 proxy options.

* Remove unused files and options.

* Set cookie domains.

* Revise proxy paths and header authorization.

* Revise quotes for bools.

* Inject extra restart of core services after tofu application during deployment.

* Revise oauth proxy prefixes.

* Revise oauth proxy auth address.

* Do not route oauth2-proxy to app.

* Remove comments. Adjust proxy priority.

* Revise oauth proxy callback urls.

* Add cookie d

--- a/novops/stages/dev/keycloak.yml
+++ b/novops/stages/dev/keycloak.yml
@@ -37,5 +37,11 @@ environments:
       - name: KEYCLOAK_ROUTE_PREFIX
         value: auth
 
-      - name: KEYCLOAK_REALM_NAME
+      - name: KEYCLOAK_REALM
         value: pukiru_online
+
+      - name: tofu_state_encryption_passphrase
+        value:
+          bitwarden:
+             entry: pukiru-online-tofu_state_encryption_passphrase
+             field: login.password
