--- a/services/ingress/traefik_configuration/middlewares.yml
+++ b/services/ingress/traefik_configuration/middlewares.yml
@@ -4,8 +4,13 @@ http:
       compress: true
     append-slash:
       redirectRegex:
-        regex: "(.+[^/])$"
-        replacement: "${1}/"
+        permanent: true
+        regex: "^(https?://[^/?#]+/apps/[^/?#]+)(\\?.*)?$"
+        replacement: "${1}/${2}"
+    strip-app-prefix:
+      stripPrefixRegex:
+        regex:
+          - "^/apps/[^/]+/?"
     security-headers:
       headers:
         browserXssFilter: true
