--- a/novops/stages/prod/traefik.yml
+++ b/novops/stages/prod/traefik.yml
@@ -16,23 +16,8 @@ environments:
       - name: TRAEFIK_DASHBOARD_ROUTE_PREFIX
         value: traefik
 
-      - name: OAUTH_COOKIE_SECRET
-        value:
-          bitwarden:
-            entry: pukiru-online-oauth_cookie_secret
-            field: login.password
-
-      - name: APPLICATION_ID
-        value: whoami
-
-      - name: APPLICATION_CLIENT_SECRET
-        value:
-          bitwarden:
-            entry: pukiru-online-oauth2_proxy_client_secret
-            field: login.password
-
-      - name: TRAEFIK_ACME_EMAIL
-        value: dalton@pukiru.games
+      - name: TRAEFIK_CONFIG_DIR
+        value: "~/docker-services-config/prod/traefik/"
 
       - name: TRAEFIK_ACME_dns_api_secret
         value:
@@ -40,3 +25,5 @@ environments:
             entry: pukiru-online-cloudflare_dns_secret
             field: login.password
 
+      - name: TRAEFIK_ACME_EMAIL
+        value: dalton@pukiru.games
