--- a/services/applications/vaultwarden-compose.yaml
+++ b/services/applications/vaultwarden-compose.yaml
@@ -1,55 +1,60 @@
 networks:
   vaultwarden:
     driver: bridge
-
 volumes:
   vaultwarden-data:
     name: "${HOST}.${DOMAIN}-vaultwarden_data"
-
+secrets:
+  vaultwarden_oauth_cookie_secret:
+    file: ${OAUTH_CONFIG_DIR}/vaultwarden/oauth_cookie_secret
+  vaultwarden_oauth_client_secret:
+    file: ${OAUTH_CONFIG_DIR}/vaultwarden/oauth_client_secret
 services:
+  vaultwarden-oauth2-proxy:
+    hostname: oauth2-proxy-vaultwarden
+    extends:
+      file: ../auth/proxy/compose.oauth2_proxy_base.yaml
+      service: oauth2-proxy-base
+    secrets:
+      - vaultwarden_oauth_cookie_secret
+      - vaultwarden_oauth_client_secret
+    labels:
+      - "traefik.http.routers.vaultwarden-oauth2-proxy.service=vaultwarden-oauth2-proxy"
+      - "traefik.http.services.vaultwarden-oauth2-proxy.loadbalancer.server.port=4180"
+      - "traefik.http.services.vaultwarden-oauth2-proxy.loadbalancer.passhostheader=true"
+    volumes:
+      - "${OAUTH_CONFIG_DIR}/vaultwarden/oauth2-proxy.cfg:/oauth2-proxy.cfg"
   vaultwarden:
     extends:
       file: common.yaml
       service: application
     image: ${VAULTWARDEN_IMAGE_TAG}
+    depends_on:
+      vaultwarden-oauth2-proxy:
+        condition: service_healthy
     volumes:
       - vaultwarden-data:/data
     environment:
       ADMIN_TOKEN: "${VAULTWARDEN_ADMIN_TOKEN}"
       SIGNUPS_VERIFY: "true"
       DNS_PREFER_IPV6: "true"
-      DOMAIN: "https://${HOST}.${DOMAIN}/${VAULTWARDEN_ROUTE_PREFIX}"
+      DOMAIN: "https://${HOST}.${DOMAIN}/apps/${VAULTWARDEN_ROUTE_PREFIX}"
       SMTP_HOST: "${SMTP_HOST}"
       SMTP_PORT: "${SMTP_PORT}"
       SMTP_SECURITY: "${SMTP_SECURITY}"
-      SMTP_FROM: "${VAULTWARDEN_SMTP_FROM}"
+      SMTP_FROM: "vaultwarden@${DOMAIN}"
       SMTP_USERNAME: "${SMTP_USERNAME}"
       SMTP_PASSWORD: "${SMTP_PASSWORD}"
     networks:
       - vaultwarden
       - traefik
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/${VAULTWARDEN_ROUTE_PREFIX}"]
+      test: ["CMD", "curl", "-f", "http://localhost:80/apps/${VAULTWARDEN_ROUTE_PREFIX}"]
       interval: 10s
       timeout: 5s
       retries: 3
       start_period: 90s
     labels:
-      # Enable Traefik for this container
-      - "traefik.enable=true"
-      # Match incoming requests on a specific hostname
-      - "traefik.http.routers.vaultwarden.rule=Host(`${HOST}.${DOMAIN}`)&&PathRegexp(`^/${VAULTWARDEN_ROUTE_PREFIX}/?`)"
-      # Apply middlewares
-      - "traefik.http.routers.vaultwarden.middlewares=compress-traefik@file,append-slash@file,security-headers@file"
-      # Assign the router to a named Traefik service
       - "traefik.http.routers.vaultwarden.service=vaultwarden"
-      # Use the 'websecure' (HTTPS) entry point
-      - "traefik.http.routers.vaultwarden.entrypoints=websecure"
-      # Define the internal container port for routing
       - "traefik.http.services.vaultwarden.loadbalancer.server.port=80"
-      # Enable TLS on this router
-      - "traefik.http.routers.vaultwarden.tls=true"
-      # Use Let's Encrypt for certificate management
-#      - "traefik.http.routers.vaultwarden.tls.certresolver=letsencrypt"
-      # Pass the original Host header to the container
       - "traefik.http.services.vaultwarden.loadbalancer.passhostheader=true"
