--- a/services/applications/whoami-compose.yaml
+++ b/services/applications/whoami-compose.yaml
@@ -1,17 +1,32 @@
+secrets:
+  whoami_oauth_cookie_secret:
+    file: ${OAUTH_CONFIG_DIR}/whoami/oauth_cookie_secret
+  whoami_oauth_client_secret:
+    file: ${OAUTH_CONFIG_DIR}/whoami/oauth_client_secret
 services:
+  whoami-oauth2-proxy:
+    hostname: oauth2-proxy-whoami
+    extends:
+      file: ../auth/proxy/compose.oauth2_proxy_base.yaml
+      service: oauth2-proxy-base
+    secrets:
+      - whoami_oauth_cookie_secret
+      - whoami_oauth_client_secret
+    labels:
+      - "traefik.http.routers.whoami-oauth2-proxy.service=whoami-oauth2-proxy"
+      - "traefik.http.services.whoami-oauth2-proxy.loadbalancer.server.port=4180"
+      - "traefik.http.services.whoami-oauth2-proxy.loadbalancer.passhostheader=true"
+    volumes:
+      - "${OAUTH_CONFIG_DIR}/whoami/oauth2-proxy.cfg:/oauth2-proxy.cfg"
   whoami:
     extends:
       file: common.yaml
       service: application
     image: traefik/whoami
+    depends_on:
+      whoami-oauth2-proxy:
+        condition: service_healthy
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`${HOST}.${DOMAIN}`)&&PathRegexp(`^/whoami/?`)"
-      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.service=whoami"
       - "traefik.http.services.whoami.loadbalancer.server.port=80"
-      # Apply middlewares
-      - "traefik.http.routers.whoami.middlewares=compress-traefik@file,oauth-auth,oauth-errors,security-headers@file"
-      # Enable TLS on this router
-      - "traefik.http.routers.whoami.tls=true"
-#      # Use Let's Encrypt for TLS management
-#      - "traefik.http.routers.whoami.tls.certresolver=letsencrypt"
+      - "traefik.http.services.whoami.loadbalancer.passhostheader=true"
