7 update default novops variables with examples for documentation (#8)
* Update novops references to Bitwarden secrets.

* Add readme.md.

* Revise prod OAUTH_SSL_INSECURE_SKIP_VERIFY.

* Revise config folder paths.

* Use coredns with override for host.

* Wait 30 seconds for tofu.

* Allow access to Keycloak admin panel in dev stage.

* Allow adding extra callback urls. Set domain specific volume name.

* Update readme with notes on external account/API requirements.

---------

Co-authored-by: Dalton <dalton@pukiru.games>

--- a/novops/stages/prod/oauth2_proxy.yml
+++ b/novops/stages/prod/oauth2_proxy.yml
@@ -5,7 +5,7 @@ environments:
         value: "v7.13.0-alpine"
 
       - name: OAUTH_CONFIG_DIR
-        value: "~/docker-services-config/prod/oauth2-proxy/"
+        value: "~/docker-services-config/scriptkitties/prod/oauth2-proxy/"
 
       - name: OAUTH_SSL_INSECURE_SKIP_VERIFY
-        value: "true"
+        value: "false"
