--- a/novops/stages/dev/traefik.yml
+++ b/novops/stages/dev/traefik.yml
@@ -7,6 +7,12 @@ environments:
       - name: DOMAIN
         value: localhost
 
+      - name: UPSTREAM_DNS
+        value: 192.168.132.1
+
+      - name: SERVER_IPv4
+        value: 192.168.132.146
+
       - name: TRAEFIK_IMAGE_TAG
         value: "traefik:v3.6.7"
 
@@ -17,4 +23,4 @@ environments:
         value: traefik
 
       - name: TRAEFIK_CONFIG_DIR
-        value: "~/docker-services-config/dev/traefik/"
+        value: "~/docker-services-config/scriptkitties/dev/traefik/"
