--- a/services/auth/identity/compose.yaml
+++ b/services/auth/identity/compose.yaml
@@ -35,6 +35,7 @@ services:
       KC_PROXY_HEADERS: xforwarded
       KC_HOSTNAME_STRICT: "true"
       KC_HOSTNAME_BACKCHANNEL_DYNAMIC: "true"
+      KC_LOG_LEVEL: "${KEYCLOAK_LOG_LEVEL}"
       KC_HOSTNAME: "https://${HOST}.${DOMAIN}/${KEYCLOAK_ROUTE_PREFIX}"
       KC_HTTP_RELATIVE_PATH: "/${KEYCLOAK_ROUTE_PREFIX}"
       KC_HTTP_ENABLED: true
