--- a/services/auth/identity/compose.tofu_apply.yaml
+++ b/services/auth/identity/compose.tofu_apply.yaml
@@ -30,6 +30,7 @@ services:
         condition: service_healthy
     command: >
       sh -lc "
+        rm /work/*.tofu
         cp -a /tofu_modules/. /work/ &&
         tofu -chdir=/work init -upgrade -input=false &&
         tofu -chdir=/work apply -auto-approve -input=false
