--- a/services/ingress/compose.prod.yaml
+++ b/services/ingress/compose.prod.yaml
@@ -50,3 +50,5 @@ services:
       - "--global.checknewversion=true"
       # Disable sending anonymous usage data to the Traefik maintainers
       - "--global.sendanonymoususage=false"
+    labels:
+      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
