4 create user groups in opentofu (#9)
* Log more for dev.

* Define role requirements for proxy access.

* Define realm roles, groups. Remove old tofu files before copying new files.

* Revise variable names and example variable roles.

* Refactor variable structure for OAuth2 clients.

* Configure service id overrides for proxies.

* Refactor traefik dashboard to separate compose with proxy for protecting traefik dashboard.

* Remove realm filter for keycloak.

---------

Co-authored-by: Dalton <dalton@pukiru.games>

--- a/services/ingress/compose.prod.yaml
+++ b/services/ingress/compose.prod.yaml
@@ -51,4 +51,4 @@ services:
       # Disable sending anonymous usage data to the Traefik maintainers
       - "--global.sendanonymoususage=false"
     labels:
-      - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
