Set default certificate resolver for prod with TLS.
Use backticks instead of quotes.

--- a/services/ingress/compose.prod.yaml
+++ b/services/ingress/compose.prod.yaml
@@ -51,4 +51,5 @@ services:
       # Disable sending anonymous usage data to the Traefik maintainers
       - "--global.sendanonymoususage=false"
     labels:
-      - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
+      - "traefik.tls.stores.default.defaultgeneratedcert.resolver=letsencrypt"
+      - "traefik.tls.stores.default.defaultgeneratedcert.domain.main=${HOST}.${DOMAIN}"
